2005-05-06 Timothy Brownawell <tbrownaw@gmail.com>

	* contrib/monoprof.sh: Add profiling test for "netsync large file".
		Add options to only run specific profile tests.

2005-05-11  Joel Reed  <joelwreed@comcast.com>

	* contrib/monotone.zsh_completion: add zsh completion contrib.

2005-05-11  Matt Johnston  <matt@ucc.asn.au>

	* tests/t_add_intermediate_MT_path.at: remove the drop dir part
	* tests/t_delete_dir.at: add a note about re-enabling the above test
	* tests/t_cvsimport3.at: ignore stderr

2005-05-11  Matt Johnston  <matt@ucc.asn.au>

	* rcs_import.cc (find_branchpoint): if a branch is derived from two 
	differing parent branches, take the one closest to the trunk.
	* tests/t_cvsimport3.at: add a test for cvs_importing where branches
	come off a vendor import.
	* testsuite.at: add it

2005-05-11  Nathaniel Smith  <njs@codesourcery.com>

	* work.cc (build_deletions): Disable delete_dir.

2005-05-11  Matthew Gregan  <kinetik@orcon.net.nz>

	* constants.cc (constants::bufsz): Increase buffer size.  Reduces
	the runtime to tests/t_netsync_largish_file.at by four to seven
	times on my test machines.

2005-05-10  Timothy Brownawell  <tbrownaw@gmail.com>

	* revision.cc: Make expand_{ancestors,dominators} twice as fast.
	Loop over revisions in the other direction so that changes at the
	frontier propogate fully in 1 pass, instead of one level at a time.

2005-05-10  Timothy Brownawell  <tbrownaw@gmail.com>

	* packet.{cc,hh}: Give packet_consumer and children a callback to call
	after writing out a revision.
	* netsync.cc: Use this callback to add a "revisions written" ticker,
	to provide user feedback while sanity checking.

2005-05-10  Timothy Brownawell  <tbrownaw@gmail.com>

	* ui.cc: Make tick_write_count take less horizontal space

2005-05-09  Nathaniel Smith  <njs@codesourcery.com>

	* AUTHORS: Give Riccardo his real name.
	* ChangeLog: Likewise.

2005-05-09  Riccardo Ghetta <birrachiara@tin.it>
	
	* std_hooks.lua: Support kdiff3.
